# Fun-With-Shadows

./: CMakeLists.txt  game.exe - Shortcut.lnk
Debug/: game.ilk
Release/: VanillaEngine.lib
contrib/msvc-windows-x86/GLFW/include/GLFW/: glfw3.h  glfw3native.h
contrib/msvc-windows-x86/ogg/include/ogg/: ogg.h  os_types.h
contrib/msvc-windows-x86/openal-soft/include/AL/: al.h  alc.h  alext.h  efx-creative.h  efx-presets.h  efx.h
contrib/msvc-windows-x86/vorbis/include/vorbis/: codec.h  vorbisenc.h  vorbisfile.h
src/Resources/shaders/: debugDepthShader.txt  lightingShader.txt  phongShadowShader.txt  skybox.frag  skybox.vert  solidColorShader.txt  terrain.frag  terrain.vert
src/Resources/shaders/vertFragFiles/: DebugDepth.frag  DepthShader.frag  DepthShader.vert  SolidColor.Frag  SolidColor.vert  lightingShader.frag  lightingShader.vert  phongShadow - Copy.frag  phongShadow.frag  phongShadow.vert
src/VanillaEngine/: Application.cpp  Application.h  Camera.cpp  Camera.h  Component.cpp  Component.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Exception.cpp  Exception.h  Input.cpp  Input.h  Lights.cpp  Lights.h  PointLight.h  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  Resource.h  Resources.h  ShaderProgram.cpp  ShaderProgram.h  ShadowBox.cpp  ShadowBox.h  ShadowManager.cpp  ShadowManager.h  ShadowShader.cpp  ShadowShader.h  SkyBox.cpp  Skybox.h  Spotlight.h  Terrain.cpp  Terrain.h  TerrainRenderer.cpp  TerrainRenderer.h  Texture.cpp  Texture.h  (+7 more)
src/game/: FirstPersonCameraControls.cpp  FirstPersonCameraControls.h  LightMovement.cpp  LightMovement.h  main.cpp
